--- a/apps/template/app/index.html
+++ b/apps/template/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Strongbox</title>
+    <title>Template</title>
     <link rel="icon" type="image/png" href="assets/images/favicon.png">
  </head>
 <body>
