--- a/apps/strongbox/app/assets/scss/app.scss
+++ b/apps/strongbox/app/assets/scss/app.scss
@@ -2,13 +2,11 @@ html, body, div#root, div#container {
 	min-height: 100%;
 	height: 100%;
 	width: 100%;
+	margin: 0;
+	padding: 0;
+	border: none;
 }
 
-body, div#root, div#container {
-	font-family: "Consolas", "Roboto", sans-serif;
-	font-size: 13px;
-    color: rgb(41, 47, 51);
-  	background-color: white;
-  	padding: 0px;
-    margin: 0px;
+html, body, div#root {
+	background: #464445;
 }
