--- a/apps/strongbox/app/assets/scss/main.scss
+++ b/apps/strongbox/app/assets/scss/main.scss
@@ -3,6 +3,10 @@ div#container {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: contain;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 div.boxButton {
@@ -11,9 +15,23 @@ div.boxButton {
 	background-repeat: no-repeat;
 	background-size: contain;
 	display: flex;
-	width: 70px;
-	height: 70px;
+	width: 8vmin;
+	height: 9vmin;
+	margin-top: 0.3vmin;
+	margin-right: 0.8vmin;
 	color: white;
+}
+
+div#container div.row {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin-left: 4vw;
+}
+
+div#row1 {
+	margin-top: 1vh;
 }
 
 div.boxButton li {
@@ -24,7 +42,7 @@ div.boxButton li {
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	font-size: 2vw;
+	font-size: 4.5vmin;
 	font-family: "Consolas", "Roboto", sans-serif;
   	-webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -32,8 +50,4 @@ div.boxButton li {
     -moz-user-select: none;
     -ms-user-select: none; 
     user-select: none; 
-}
-
-div.boxButton1 {
-	left: 10%;
 }
