--- a/apps/strongbox/app/assets/scss/app.scss
+++ b/apps/strongbox/app/assets/scss/app.scss
@@ -1,4 +1,4 @@
-html, body, div#root, div#container {
+html, body, div#root {
 	min-height: 100%;
 	height: 100%;
 	width: 100%;
@@ -7,6 +7,6 @@ html, body, div#root, div#container {
 	border: none;
 }
 
-html, body, div#root {
+html, body {
 	background: #464445;
 }
