--- a/apps/strongbox/app/assets/scss/app.scss
+++ b/apps/strongbox/app/assets/scss/app.scss
@@ -1,4 +1,4 @@
-html, body, div#root {
+html, body, div#root, div.screen_wrapper {
 	min-height: 100%;
 	height: 100%;
 	width: 100%;
@@ -10,3 +10,4 @@ html, body, div#root {
 html, body {
 	background: #464445;
 }
+
