--- a/apps/strongbox/app/assets/scss/main.scss
+++ b/apps/strongbox/app/assets/scss/main.scss
@@ -1,4 +1,4 @@
-div#root {
+div#screen_main {
 	background-image: url("../images/background.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
