--- a/apps/Fakemail/app/assets/scss/style.sass
+++ b/apps/Fakemail/app/assets/scss/style.sass
@@ -290,12 +290,12 @@ h3
         .mail2
           color: lighten($typecolor, 40)
           padding: .2rem 0 0 0
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          width: 99%;
-          float: left;
-          margin-top: 5px;
+          white-space: nowrap
+          overflow: hidden
+          text-overflow: ellipsis
+          width: 99%
+          float: left
+          margin-top: 5px
 
 
 /* --------- col2 ---------*/
@@ -558,8 +558,8 @@ path
 /* Restore escapp styles */
 div.modal__container
   .content
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 1rem
+    margin-bottom: 1rem
   .modal-input
-    margin: 0px 10px 20px 0px;
-    line-height: 1.5;
+    margin: 0px 10px 20px 0px
+    line-height: 1.5
