--- a/apps/bloc/app/assets/scss/bloc.scss
+++ b/apps/bloc/app/assets/scss/bloc.scss
@@ -55,4 +55,15 @@
 		font-size: 1.5em;
 	}
 
+	.continue {
+		background: black;
+		border: none;
+		padding: .2em .5em;
+		color: white;
+		font-family: inherit;
+		font-size: 0.8em;
+		cursor: pointer;
+
+	}
+
 }
