--- a/apps/desktop/src/utils/general.scss
+++ b/apps/desktop/src/utils/general.scss
@@ -374,6 +374,7 @@ body[data-theme="dark"] .win11Scroll,
       top: 20%;
       left: 20%;
       font-size: 1.8em;
+      font-size: 2.2vw;
     }
     &.show {
       bottom: -10%;
@@ -383,6 +384,7 @@ body[data-theme="dark"] .win11Scroll,
     input#bloc_input {
       background: transparent;
       font-size: 2.5em;
+      font-size: 2.3vw;
       display: block;
       font-family: inherit;
       font-size: inherit;
@@ -403,12 +405,15 @@ body[data-theme="dark"] .win11Scroll,
       color: tomato;
       font-family: monospace;
       font-size: 1em;
+      font-size: 1.2vw;
     }
 
     p.success {
       color: #3ECA6B;
       font-family: monospace;
       font-size: 1em;
+      font-size: 1.2vw;
+      
     }
 
     .continue {
