--- a/apps/fakedetector/src/assets/scss/app.scss
+++ b/apps/fakedetector/src/assets/scss/app.scss
@@ -1,6 +1,17 @@
+@import 'lib/mixins';
+@import 'lib/vars';
+
+@import 'partials/header';
+@import 'partials/content';
+@import 'partials/footer';
+@import 'partials/modal';
+
 html, body {
   margin:0;
   padding: 0;
+
+  font-family: $font-family-base;
+  font-size: $font-base;
   //overflow:hidden;
 }
 
@@ -17,26 +28,15 @@ html {
   justify-content: stretch;
   align-content: stretch;    
   grid-template-rows: 10% 80% 10%;
+
 }
 
-
-.header {
-  background-color: #fafafa;
-  grid-row: 1/1;
-  display: flex;
-  justify-content: center;
+p {
+  margin: 0;
 }
 
-.content {
-  background-color: #dfdddd;
-  grid-row: 2/2;
-  display: flex;
-  justify-content: center;
-}
-
-.footer {
-  background-color: #ffc2c2;
-  grid-row: 3/3;
-  display: flex;
-  justify-content: center;
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
