--- a/apps/safebox/app/assets/scss/app.scss
+++ b/apps/safebox/app/assets/scss/app.scss
@@ -8,7 +8,7 @@ html, body, div#root, div.screen_wrapper {
 }
 
 html, body {
-	background: #464445;
+	background: transparent;
 }
 
 .screen_wrapper {
