--- a/apps/safebox/app/assets/scss/main.scss
+++ b/apps/safebox/app/assets/scss/main.scss
@@ -80,3 +80,13 @@ div.boxlight.boxlight_green {
 	display: none;
 	background-image: url("../images/light_green.png");
 }
+
+
+.containers {
+	width: 100%;
+	height: 100%;
+	width: min(100vw,400/3vh);
+	height: min(100vh,75vw);
+	position: relative;
+	//background-color: rgba(0, 255, 0, 0.3);
+}
