--- a/apps/key/app/assets/scss/app.scss
+++ b/apps/key/app/assets/scss/app.scss
@@ -52,3 +52,36 @@ html, body {
 	position: relative;
 	//background-color: rgba(0, 255, 0, 0.3);
 }
+
+.boxStyle {
+	visibility: visible;
+	overflow: hidden;
+	text-align: left;
+	padding: 1em;
+	background-color: black;
+	border-width: 0em;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	border-radius: 0em;
+	opacity: 1;
+	color: white;
+	box-sizing: border-box;
+	position: absolute;
+	width:100%;
+	left: 0;
+	right: 0;
+	bottom:0;
+	height: auto;
+	& > div {
+		width: 100%;
+		height: 100%;
+	}
+
+	* {
+		font-size: 2.3vw;
+		font-family: monospace;
+	}
+	p {
+		margin: 0;
+	}
+}
