--- a/apps/fakedetector/src/assets/scss/app.scss
+++ b/apps/fakedetector/src/assets/scss/app.scss
@@ -16,18 +16,21 @@ html, body {
 }
 
 html {
-  background: url("../../../public/images/tablet.png") no-repeat center center fixed; 
+  background: url("../images/V3-1-1-1.jpg") no-repeat center center fixed; 
+  background-color: #c8b197;
   background-size: 100% 100%;
 }
 
 .App {  
-  height: 90vh;
+  //height: 100vh;
   overflow:hidden;
-  padding: 5vh 5vw 5vh 5vw;
+  padding: 5vh 10vw;
+  border-radius: .25rem;
   display: grid;
   justify-content: stretch;
   align-content: stretch;    
-  grid-template-rows: 10% 80% 10%;
+  grid-template-rows: 15% 70% 15%;
+  height: 90vh;
 
 }
 
