--- a/apps/fakedetector/src/assets/scss/lib/_vars.scss
+++ b/apps/fakedetector/src/assets/scss/lib/_vars.scss
@@ -1,6 +1,6 @@
 $font-base: 16px;
 
-$font-family-base: 'Helvetica', 'Arial', sans-serif;
+$font-family-base: 'Karla', 'Helvetica', 'Arial', sans-serif;
 
 $true: #2aaf35;
 $false: #c41e1e;
@@ -9,5 +9,5 @@ $black: #111111;
 $white: #f2f2f2;
 
 $hover-opacity: .8;
-$border-true: .1rem solid $true;
-$border-false: .1rem solid $false;
+$border-true: .15rem solid $true;
+$border-false: .15rem solid $false;
