--- a/apps/fakedetector/src/assets/scss/app.scss
+++ b/apps/fakedetector/src/assets/scss/app.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 html {
-  background: url("../images/V3-1-1-1.jpg") no-repeat center center fixed; 
+  background: url("../../../public/images/V3-1-1-1.jpg") no-repeat center center fixed; 
   background-color: #c8b197;
   background-size: 100% 100%;
 }
