--- a/apps/fakedetector/src/assets/scss/partials/_content.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_content.scss
@@ -41,8 +41,8 @@
 
         img {
             height: 100%;
-            object-fit: contain;
-            
+            width: 100%;
+            object-fit: contain;            
         }
     }
 
