--- a/apps/fakedetector/src/assets/scss/partials/_header.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_header.scss
@@ -15,7 +15,7 @@
     }
 
     .selection_info {
-        
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -40,7 +40,7 @@
                 fill: $true;
                 margin-right: .5rem;
             }
-            
+
             .true_news {
                 background-color: $true;
             }
@@ -59,5 +59,22 @@
                 background-color: $false;
             }
         }
+    }
+}
+
+
+@media (max-width: 1280px) {
+  .header {
+      padding: 0.45rem;
+      .notice_data {
+          h2 {
+              margin: 0 0 0.25rem 0;
+              font-size: 1rem;
+          }
+          .context {
+            font-size: 0.75rem;
+          }
+
+      }
     }
 }
