--- a/apps/fakedetector/src/assets/scss/partials/_content.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_content.scss
@@ -27,7 +27,7 @@
             } */
             //desaparece
             visibility: hidden;
-        } 
+        }
     }
 
     .content {
@@ -42,7 +42,7 @@
         img {
             height: 100%;
             width: 100%;
-            object-fit: contain;            
+            object-fit: contain;
         }
     }
 
@@ -57,4 +57,14 @@
 
 }
 
+
+
+@media (max-width: 1280px) {
+  .full_content {
+    .content {
+      height: 95%;
+      padding: 0.15rem;
+    }
+  }
+}
 /* {} */
