--- a/apps/video/app/assets/scss/app.scss
+++ b/apps/video/app/assets/scss/app.scss
@@ -16,5 +16,58 @@ body, div#root, div#container {
 
 video, iframe {
 	width: 100%;
-	height: 100%;
+	height: calc(100% - 53px);
+}
+
+
+
+.lowbar {
+	color: white;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between
+}
+
+
+.skip, .fullscreen {
+	border: 1px solid transparent;
+	background: white;
+	outline: none;
+	padding: 12px 10px;
+	font-size: 21px;
+	cursor: pointer;
+}
+
+.fullscreen {
+	display: inline-block;
+	margin-bottom: 0;
+	font-weight: normal;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	background-image: none;
+	border: 1px solid transparent;
+	padding: 6px 12px;
+	font-size: 14px;
+	line-height: 1.42857143;
+	border-radius: 4px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	margin: auto;
+	border: 0;
+	border-radius: 0;
+	background-color: #777;
+	padding: 12px 10px;
+	font-size: 18px;
+	width: 50px;
+	color: white;
+}
+
+.fullscreen .fa {
+	vertical-align: middle;
 }
