--- a/apps/fakedetector/src/assets/scss/partials/_footer.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_footer.scss
@@ -115,4 +115,8 @@
   .footer {
       padding: 0 1rem 0 1rem;
     }
+    .send_warning {
+        width: 130px;
+        bottom: 3rem !important;       
+    }
 }
