--- a/apps/fakedetector/src/assets/scss/partials/_modal.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_modal.scss
@@ -143,8 +143,8 @@
 @media (max-width: 1280px) {
       .modal_content {
         width: 85%;
-        max-height: 80vh;
-        overflow: scroll;
+        max-height: 85vh;
+        overflow: auto;
         padding: 1rem;
         h2 {
             font-size: 1.4em;
