--- a/apps/video/app/assets/scss/app.scss
+++ b/apps/video/app/assets/scss/app.scss
@@ -16,7 +16,8 @@ body, div#root, div#container {
 
 video, iframe {
 	width: 100%;
-	height: calc(100% - 53px);
+	/*eight: calc(100% - 53px);*/
+	height: 100%;
 }
 
 
