--- a/apps/safebox/app/assets/scss/safeopen.scss
+++ b/apps/safebox/app/assets/scss/safeopen.scss
@@ -10,3 +10,42 @@ div#screen_safe_open_screen {
 	color: white;
 	font-family: "Consolas", "Roboto", sans-serif;
 }
+
+.boxStyle {
+	overflow: hidden;
+	text-align: left;
+	padding: 1em;
+	background-color: black;
+	border-width: 0em;
+	border-style: solid;
+	border-color: rgb(0, 0, 0);
+	border-radius: 0em;
+	opacity: 1;
+	color: white;
+	box-sizing: border-box;
+	position: absolute;
+	width:100%;
+	left: 0;
+	right: 0;
+	bottom:0;
+	height: auto;
+	& > div {
+		width: 100%;
+		height: 100%;
+	}
+
+	* {
+		font-size: 1.5vw;
+		font-family: monospace;
+	}
+	p {
+		margin: 0;
+	}
+}
+
+.btn {
+	border: 0;
+	background-color: white;
+	color: black;
+	padding: 1vw;
+}
