fakedetector production without lastpuzzle

--- a/apps/fakedetector/src/assets/scss/partials/_footer.scss
+++ b/apps/fakedetector/src/assets/scss/partials/_footer.scss
@@ -117,6 +117,14 @@
     }
     .send_warning {
         width: 130px;
-        bottom: 3rem !important;       
+        bottom: 3.5rem !important;       
     }
 }
+
+
+@media (max-width: 780px) {
+      .send_warning {
+          width: 130px;
+          bottom: 3rem !important;       
+      }
+  }
