Update desktop bloc

--- a/apps/desktop/src/utils/general.scss
+++ b/apps/desktop/src/utils/general.scss
@@ -397,7 +397,7 @@ body[data-theme="dark"] .win11Scroll,
         padding: 0;
 
         &::placeholder {
-          color: #cccccc;
+          color: #777;
         }
 
     }
